--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,8 @@ nav .menu-items{
     padding: 20px 0 20px 10px;
     width: 100%;
     list-style: none;
+    opacity: 0;
+    animation: showcoontent4 1s ease-in-out  0.6s 1 forwards;
 }
 .menu-items li a{
     display: flex;
@@ -266,6 +268,9 @@ nav.open ~ .dashboard{
     padding: 10px 14px;
     transition: var(--tran-05);
     z-index: 20;
+    opacity: 0;
+    animation: showcoontent 0.5s ease-in-out  0.3s 1 forwards;
+
 }
 nav.open ~ .dashboard .top{
     width: calc(100% - 200px);
@@ -354,6 +359,8 @@ nav.open ~ .dashboard .top{
     border-radius:30px ;
     background-color: var(--primary-color);
     border: none;
+    opacity: 0;
+    animation: showcoontent 0.5s ease-in-out  0.3s 1 forwards;
 }
 .dash-content .intro .shape{
     width: 20%;
@@ -376,6 +383,8 @@ nav.open ~ .dashboard .top{
     right: 3%;
     border: 5px solid var(--border-color);
     box-shadow: 2px 2px 15px var(--black-light-color);
+    opacity: 0;
+    animation: showcoontent 1s ease-in-out  0.6s 1 forwards;
 }
 .dash-content .intro .head-title{
     width: 75%;
@@ -397,6 +406,9 @@ nav.open ~ .dashboard .top{
     font-size: 25px;
     padding: 0px 10px;
     font-weight: 500;
+    opacity: 0;
+    animation: showcoontent2 1s ease-in-out  0.6s 1 forwards;
+
 }
 .dash-content .intro .head-title a{
     text-decoration: none;
@@ -460,6 +472,8 @@ nav.open ~ .dashboard .top{
     width: 60%;
     list-style: none;
     margin:0 20px;
+    opacity: 0;
+    animation: showcoontent 1s ease-in-out  0.6s 1 forwards;
 }
 .dash-content ul li{
     margin: 10px 0;
@@ -488,6 +502,15 @@ nav.open ~ .dashboard .top{
     justify-content: center;
     font-size: 25px;
 }
+.bottomcon .links a:nth-child(odd){
+    opacity: 0;
+    animation: showcoontent 1s ease-in-out  0.6s 1 forwards;
+}
+.bottomcon .links a:nth-child(even){
+    opacity: 0;
+    animation: showcoontent2 1s ease-in-out  0.6s 1 forwards;
+}
+
 .bottomcon .links a:hover{
     background-color: var(--primary-color);
     color: var(--text-color);
@@ -515,11 +538,12 @@ nav.open ~ .dashboard .top{
 }
 .dash-maincontent .leftcon{
     width: 30%;
+    padding: 0 20px;
     height: 80vh;
     overflow-y: auto;
     overflow-x: hidden;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: start;
     flex-direction: column;
 }
@@ -574,11 +598,22 @@ nav.open ~ .dashboard .top{
     height: fit-content;
     background: var(--background-color);
     border-radius:30px;
+    margin-left: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     color: var(--title-icon-color);
+    cursor: pointer;
+    opacity: 0;
+    animation: showcoontent3 0.6s ease-in-out  0.6s 1 forwards;
+}
+.dash-maincontent .rightcon .pro-card:hover{
+    background:var(--border-color) ;
+    box-shadow: 1px 1px 15px var(--nav-color);
+}
+.dash-maincontent .rightcon .pro-card.hidden{
+    display: none;
 }
 .dash-maincontent .rightcon .pro-card .pro-head{
     width: 90%;
@@ -616,6 +651,9 @@ nav.open ~ .dashboard .top{
     margin-top: 20px;
     border-radius: 30px;
     background-color: var(--background-color);
+    opacity: 0;
+    animation: showcoontent4 1s ease-in-out  0.6s 1 forwards;
+
 }
 .dash-maincontent .leftcon .div1 .certificates ul,.dash-maincontent .leftcon .div2 .experiences ul{
     width: 100%;
@@ -635,8 +673,10 @@ nav.open ~ .dashboard .top{
     align-items: center;
 }
 .dash-maincontent .leftcon .div1 .certificates ul li p,.dash-maincontent .leftcon .div2 .experiences ul li p{
-    width: 80%;
-    font-size: 18px;
+    width: 90%;
+    padding: 0 10px;
+    font-size: 15px;
+    font-weight: 600;
     color: var(--title-icon-color);
 }
 .dash-maincontent .leftcon .div1 .certificates ul li span,.dash-maincontent .leftcon .div2 .experiences ul li span{
@@ -661,12 +701,14 @@ nav.open ~ .dashboard .top{
     width: 100%;
     height: fit-content;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: start;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 25px;
 }
 .dashboard .dash-comments .comments .comment{
-    min-width: fit-content;
+    min-width: 45%;
     max-width: 100%;
     display: flex;
     justify-content: center;
@@ -674,14 +716,17 @@ nav.open ~ .dashboard .top{
     flex-direction: row;
     flex-wrap: nowrap;
     gap: 20px;
-    margin: 20px 0;
+    margin: 10px 0;
+    opacity: 0;
+    animation: showcoontent 1s ease-in-out  0.6s 1 forwards;
+
 }
 .dashboard .dash-comments .comments .comment i{
-    font-size: 30px;
+    font-size: 50px;
     color: var(--primary-color);
 }
 .dashboard .dash-comments .comments .comment .comment-card{
-    width: fit-content;
+    width: 100%;
     height: fit-content;
     background-color: var(--background-color);
     display: flex;
@@ -691,6 +736,20 @@ nav.open ~ .dashboard .top{
     border-radius: 20px 20px 20px 0;
     box-shadow: 1px 1px 10px var(--black-light-color);
     color: var(--title-icon-color);
+}
+.dashboard .dash-comments .comments .comment .comment-card span:nth-child(1){
+    font-size: 18px;
+    font-weight: 600;
+}
+.dashboard .dash-comments .comments .comment .comment-card span:nth-child(4){
+    font-size: 15px;
+    font-weight: 300;
+}
+.dashboard .dash-comments .comments .comment .comment-card p{
+    width: 90%;
+    overflow: hidden;
+    font-size: 18px;
+
 }
 .dashboard .dash-comments .leave-comment {
     width: 100%;
@@ -782,6 +841,24 @@ nav.open ~ .dashboard .top{
 .star-rating label:hover ~ label {
     color: gold;
 }
+.comment-card .starsdiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 1px;
+}
+.comment-card .starsdiv .stars{
+    color: gold;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.4em;
+    transition: color 0.2s;
+}
+.comment-card .starsdiv .stars::before{
+    content: '★';
+}
 .footer{
     width: 95%;
     height: 45vh;
@@ -828,7 +905,61 @@ nav.open ~ .dashboard .top{
     border-bottom: 1px solid var(--text-color);
     text-align: center;
 }
+@keyframes showcoontent {
+    from{
+        opacity: 0;
+        transform: translate(0,100px);
+        filter: blur(30px);
+    }to{
+        opacity: 1;
+        transform: translate(0,0);
+        filter: blur(0px);
+    }
+}
+@keyframes showcoontent2 {
+    from{
+        opacity: 0;
+        transform: translate(0,-100px);
+        filter: blur(30px);
+    }to{
+        opacity: 1;
+        transform: translate(0,0);
+        filter: blur(0px);
+    }
+}
+@keyframes showcoontent3 {
+    from{
+        opacity: 0;
+        transform: translate(-100px,0);
+        filter: blur(30px);
+    }to{
+        opacity: 1;
+        transform: translate(0,0);
+        filter: blur(0px);
+    }
+}
+@keyframes showcoontent4 {
+    from{
+        opacity: 0;
+        transform: translate(100px,0);
+        filter: blur(30px);
+    }to{
+        opacity: 1;
+        transform: translate(0,0);
+        filter: blur(0px);
+    }
+}
 @media (max-width:800px) {
+    nav{
+        display: none;
+    }
+    .dashboard{
+        width: 100%;
+        left: 0;
+    }
+    .dashboard .top{
+        width: 100%;
+    }
     .dashboard .top h3 i{
         display: none;
     }
@@ -843,10 +974,10 @@ nav.open ~ .dashboard .top{
         display: none;
     }
     .dash-content .intro .image-con{
-        width: 100px;
-        height: 100px;
+        width: 110px;
+        height: 110px;
         top: 20%;
-        right: 0;
+        right: 5%;
         z-index: 15;
     }
     .dash-content .intro .head-title{
@@ -921,5 +1052,21 @@ nav.open ~ .dashboard .top{
     .footer div h2{
         margin-bottom: 10px;
         font-size: 20px;
+    }
+    .window .win-content{
+        width: 90%;
+        height: 80%;
+        position: absolute;
+        top: 10%;
+        left: 5%;
+        border-radius:10px;
+    }
+    .window #close-win{
+        position: absolute;
+        top: 1%;
+        left: 1%;
+        font-size: 40px;
+        cursor: pointer;
+        color: var(--background-color);
     }
 }
