--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,36 @@ body.dark::-webkit-scrollbar-thumb:hover,
 body.dark .activity-data::-webkit-scrollbar-thumb:hover{
     background: #3A3B3C;
 }
+#notification.hidden {
+    display: none;
+}
+#notification {
+    position: fixed;
+    top: 50px;
+    left: 80px;
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    animation: showcoontent4 0.5s ease-in-out  0.4s 1 forwards;
+}
+
+#notificationMessage {
+    margin-right: 10px;
+}
+
+#closeNotification {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
 .window{
     display: flex;
     position: fixed;
@@ -83,16 +113,99 @@ body.dark .activity-data::-webkit-scrollbar-thumb:hover{
     color: red;
 }
 .window .win-content{
-    width: 50%;
-    height: 50%;
+    width: 80%;
+    height: 80%;
     position: absolute;
-    top: 25%;
-    left: 25%;
-    border-radius:30px;
+    top: 10%;
+    left: 10%;
+    border-radius:20px;
     background-color: var(--background-color);
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+}
+.window .win-content .right{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    padding: 1% 5%;
+}
+.window .win-content .right .head{
+    width: 100%;
+    text-align: center;
+    color: var(--primary-color);
+    text-transform: capitalize;
+}
+.window .win-content .right label{
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--primary-color);
+    text-transform: capitalize;
+    border-bottom: 1px solid var(--primary-color);
+}
+.window .win-content .right div label{
+    font-size: 15px;
+    margin: 0 5px 0 15px;
+    border-bottom: none;
+}
+.window .win-content .right div:nth-last-child(1){
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.window .win-content .right div button{
+    font-size: 15px;
+    margin: 20px 0 ;
+    padding: 5px 0 ;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 30px;
+    font-size: 20px;
+    width: 40%;
+    color: var(--text-color);
+    background-color: var(--primary-color);
+    transition: var(--tran-03);
+}
+.window .win-content .right div button:hover{
+    background-color: var(--text-color);
+    color: var(--primary-color);
+}
+.window .win-content .right div input{
+    width: 30%;
+    font-size: 10px;
+    
+    margin-right: 10px;
+}
+.window .win-content .right input{
+    width: 80%;
+    padding: 10px;
+    font-size: 15px;
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    margin: 10px 0 ;
+}
+.window .win-content .left{
+    width: 50%;
+    height: 100%;
+    border-radius: 30px 0 0 30px;
+    background: url(/images/104764.jpg);
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+}
+.window .win-content .left div{
+    width: 100%;
+    height: 100%;
+    background: var(--primary-color);
+    opacity: 0.8;
 }
 nav{
     position: fixed;
@@ -364,23 +477,25 @@ nav.open ~ .dashboard .top{
 }
 .dash-content .intro .shape{
     width: 20%;
-    height: 40%;
+    height: 80%;
     background: var(--border-color);
     position: absolute;
-    bottom: 0;
-    right: 0;
-    border-radius: 30px 0 20px 0;
+    bottom: -7%;
+    right: -3%;
+    opacity: 0;
+    animation: showcoontent 1s ease-in-out  0.6s 1 forwards;
+    border-radius: 50%;
 }
 .dash-content .intro .image-con{
-    width: 200px;
-    height: 200px;
+    width: 270px;
+    height: 270px;
     background: url(/images/personal_img.png);
     background-position: center;
     background-size: cover;
     border-radius: 50%;
     position: absolute;
-    bottom: 10%;
-    right: 3%;
+    bottom: 7%;
+    right: 2%;
     border: 5px solid var(--border-color);
     box-shadow: 2px 2px 15px var(--black-light-color);
     opacity: 0;
@@ -649,6 +764,7 @@ nav.open ~ .dashboard .top{
     width: 100%;
     height: fit-content;
     margin-top: 20px;
+    margin-bottomr: 20px;
     border-radius: 30px;
     background-color: var(--background-color);
     opacity: 0;
@@ -816,11 +932,18 @@ nav.open ~ .dashboard .top{
     direction: rtl;
     display: inline-flex;
     font-size: 1.4em;
-    justify-content: center;
+    width: 65%;
+    justify-content: end;
+    align-items: center;
     unicode-bidi: bidi-override;
 }
 .star-rating input {
     display: none;
+}
+.star-rating span {
+    direction: ltr;
+    font-size: 18px;
+    margin-right: 10px;
 }
 .star-rating label {
     color: #ccc;
@@ -976,7 +1099,7 @@ nav.open ~ .dashboard .top{
     .dash-content .intro .image-con{
         width: 110px;
         height: 110px;
-        top: 15%;
+        top: 20%;
         right: 5%;
         z-index: 15;
     }
@@ -1068,5 +1191,15 @@ nav.open ~ .dashboard .top{
         font-size: 40px;
         cursor: pointer;
         color: var(--background-color);
+    }
+    .window .win-content .right{
+        width: 100%;
+    }
+    .window .win-content .left{
+        display: none;
+    }
+    #notification {
+        top: 60px;
+        left: 10px;
     }
 }
