--- a/css/style.css
+++ b/css/style.css
@@ -764,7 +764,7 @@ nav.open ~ .dashboard .top{
     width: 100%;
     height: fit-content;
     margin-top: 20px;
-    margin-bottomr: 20px;
+    margin-bottom: 20px;
     border-radius: 30px;
     background-color: var(--background-color);
     opacity: 0;
