--- a/css/style.css
+++ b/css/style.css
@@ -1021,6 +1021,32 @@ nav.open ~ .dashboard .top{
     height: 100%;
     background-color: var(--primary-color);
     opacity: 0.8;
+    position: relative;
+    overflow: hidden;
+}
+.dashboard .dash-comments .comment-con .right i:nth-child(3){
+    font-size: 150px;
+    color: var(--text-color);
+    opacity: 0.1;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.dashboard .dash-comments .comment-con .right i:nth-child(2){
+    font-size: 150px;
+    color: var(--text-color);
+    opacity: 0.1;
+    position: absolute;
+    top: -10%;
+    left: 0;
+}
+.dashboard .dash-comments .comment-con .right i:nth-child(1){
+    font-size: 300px;
+    color: var(--text-color);
+    opacity: 0.1;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 .star-rating {
     direction: rtl;
@@ -1259,6 +1285,11 @@ nav.open ~ .dashboard .top{
     .dashboard .dash-comments .comment-con .right{
         width: 100%;
         height: 30%;
+    }
+    .dashboard .dash-comments .comment-con .right i:nth-child(3){font-size: 100px;}
+    .dashboard .dash-comments .comment-con .right i:nth-child(2){font-size: 50px;}
+    .dashboard .dash-comments .comment-con .right i:nth-child(1){
+        font-size: 150px;
     }
     .footer{height: fit-content;}
     .footer div{
