--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body{
     width: 100%;
     height: 100vh;
     background-color: var(--background1-color);
+    position: relative;
 }
 body.dark{
     --primary-color: #3399FF;
@@ -42,6 +43,28 @@ body.dark{
     --nav-color: #000000;
     --title-icon-color: #2c2c2c;
     --window-color:#3c3c3ca0;
+}
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid rgba(0, 0, 0, 0.1);
+    border-top-color: var(--primary-color);
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
 }
 h3{
     opacity: 0;
@@ -130,7 +153,7 @@ body.dark .activity-data::-webkit-scrollbar-thumb:hover{
     font-size: 16px;
     cursor: pointer;
 }
-.window,.search_window{
+.window,.search_window,.details_window{
     display: flex;
     position: fixed;
     z-index: 1000;
@@ -138,7 +161,7 @@ body.dark .activity-data::-webkit-scrollbar-thumb:hover{
     height: 100%;
     background-color: var(--window-color);
 }
-.window.hidden,.search_window.hidden{
+.window.hidden,.search_window.hidden,.details_window.hidden{
     display: none;
 }
 .window #close-win,.search_window #close-win{
@@ -152,7 +175,7 @@ body.dark .activity-data::-webkit-scrollbar-thumb:hover{
 .window #close-win:hover,.search_window #close-win:hover{
     color: red;
 }
-.window .win-content,.search_window .win-content{
+.window .win-content,.search_window .win-content,.details_window .win-content{
     width: 85%;
     height: 85%;
     position: absolute;
@@ -609,7 +632,7 @@ nav.open ~ .dashboard .top{
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    color: var(--text-color);
+    color: var(--background-color);
 }
 .dash-content .intro .head-title h2{
     font-size: 20px;
@@ -898,12 +921,33 @@ nav.open ~ .dashboard .top{
     align-items: center;
     flex-direction: column;
     color: var(--nav-color);
-    cursor: pointer;
     opacity: 0;
     animation: showcoontent3 0.6s ease-in-out  0.6s 1 forwards;
+    position: relative;
 }
-.dash-maincontent .rightcon .pro-card:hover{
-    box-shadow: 1px 1px 15px var(--nav-color);
+.dash-maincontent .rightcon .pro-card .shadow{
+    height: 0;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    transition: var(--tran-03);
+    background-color:#3a3b3c1e;
+    overflow: hidden;
+}
+.dash-maincontent .rightcon .pro-card .shadow a:hover{color: var(--primary-color);}
+.dash-maincontent .rightcon .pro-card .shadow a{
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+    text-decoration: none;
+    color: var(--title-icon-color);
+    text-transform: capitalize;
+    font-size: 20px;
+    cursor: pointer;
+    transition: var(--tran-03);
+}
+.dash-maincontent .rightcon .pro-card:hover .shadow{
+    height: 100%;
 }
 .dash-maincontent .rightcon .pro-card.hidden{
     display: none;
