--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
     --text-color: #bbbbbb;
     --black-light-color: #707070;
     --nav-color: #000;
+    --text2-color: #000;
     --title-icon-color: #1c1c1c;
     --window-color:#1c1c1ca0;
     --completed:rgb(139, 226, 139);
@@ -39,6 +40,7 @@ body.dark{
     --background-color: #2a2a2a;
     --background1-color: #1a1a1a;
     --text-color: #888888;
+    --text2-color: #888888;
     --black-light-color: #a0a0a0;
     --nav-color: #000000;
     --title-icon-color: #2c2c2c;
@@ -164,7 +166,7 @@ body.dark .activity-data::-webkit-scrollbar-thumb:hover{
 .window.hidden,.search_window.hidden,.details_window.hidden{
     display: none;
 }
-.window #close-win,.search_window #close-win{
+.window #close-win,.search_window #close-win,.details_window #close-win{
     position: absolute;
     top: 4%;
     left: 4%;
@@ -172,7 +174,7 @@ body.dark .activity-data::-webkit-scrollbar-thumb:hover{
     cursor: pointer;
     color: var(--background-color);
 }
-.window #close-win:hover,.search_window #close-win:hover{
+.window #close-win:hover,.search_window #close-win:hover,.details_window #close-win:hover{
     color: red;
 }
 .window .win-content,.search_window .win-content,.details_window .win-content{
@@ -188,23 +190,30 @@ body.dark .activity-data::-webkit-scrollbar-thumb:hover{
     align-items: center;
     overflow: hidden;
 }
-.window .win-content .right{
+.details_window .win-content .repo_link{
+    color: var(--primary-color);
+    font-size: 20px;
+    position: absolute;
+    bottom: 10%;
+
+}
+.window .win-content .right,.details_window .win-content .right{
     width: 50%;
     height: 100%;
-
     display: flex;
     justify-content: start;
     align-items: start;
     flex-direction: column;
     padding: 1% 5%;
 }
-.window .win-content .right .head{
+.details_window .win-content .right{gap: 2%;}
+.window .win-content .right .head,.details_window .win-content .right .head{
     width: 100%;
     text-align: center;
     color: var(--primary-color);
     text-transform: capitalize;
 }
-.window .win-content .right label{
+.window .win-content .right label,.details_window .win-content .right label{
     font-size: 18px;
     font-weight: 600;
     color: var(--primary-color);
@@ -732,7 +741,7 @@ nav.open ~ .dashboard .top{
 }
 .dash-content ul li span{
     font-weight: 500;   
-    color: var(--nav-color);
+    color: var(--text2-color);
 }
 .bottomcon .links{
     margin-top: 30px;
@@ -940,7 +949,7 @@ nav.open ~ .dashboard .top{
     bottom: 5%;
     right: 5%;
     text-decoration: none;
-    color: var(--title-icon-color);
+    color: var(--twxt2-color);
     text-transform: capitalize;
     font-size: 20px;
     cursor: pointer;
@@ -960,6 +969,7 @@ nav.open ~ .dashboard .top{
     align-items: center;
     padding: 10px 0;
     border-bottom: 1px solid var(--primary-color);
+    color: var(--text2-color);
 }
 .dash-maincontent .rightcon .pro-card .pro-head .label{
     font-size: 20px;
@@ -978,7 +988,7 @@ nav.open ~ .dashboard .top{
     font-size: 18px;
     width: 90%;
     margin:10px 20px;
-    color: var(--nav-color);
+    color: var(--text2-color);
 }
 .dash-maincontent .rightcon .pro-card .date{
     font-size: 15px;
@@ -1024,7 +1034,7 @@ nav.open ~ .dashboard .top{
     width: 20%;
     height: 150px;
     border-radius: 20px;
-    border: 2px solid var(--text-color);
+    border: 2px solid var(--text2-color);
     display: flex;
     padding-top: 30px;
     justify-content: start;
@@ -1050,14 +1060,14 @@ nav.open ~ .dashboard .top{
     padding: 0 10px;
     font-size: 18px;
     font-weight: 500;
-    color: var(--nav-color);
+    color: var(--text2-color);
 }
 .dash-maincontent .leftcon .div2 .experiences ul li p{
     width: 90%;
     padding: 0 10px;
     font-size: 18px;
     font-weight: 400;
-    color: var(--nav-color);
+    color: var(--text2-color);
 }
 .dash-maincontent .leftcon .div1 .certificates ul li span,.dash-maincontent .leftcon .div2 .experiences ul li span{
     font-size: 18px;
@@ -1244,6 +1254,7 @@ nav.open ~ .dashboard .top{
     direction: ltr;
     font-size: 18px;
     margin-right: 10px;
+    color: var(--text2-color);
 }
 .star-rating label {
     color: #ccc;
@@ -1539,7 +1550,7 @@ nav.open ~ .dashboard .top{
         margin-bottom: 10px;
         font-size: 20px;
     }
-    .window .win-content{
+    .window .win-content,.details_window .win-content{
         width: 90%;
         height: 90%;
         position: absolute;
@@ -1547,7 +1558,7 @@ nav.open ~ .dashboard .top{
         left: 5%;
         border-radius:10px;
     }
-    .window #close-win{
+    .window #close-win,.details_window #close-win{
         position: absolute;
         top: 1%;
         left: 1%;
@@ -1555,12 +1566,16 @@ nav.open ~ .dashboard .top{
         cursor: pointer;
         color: var(--background-color);
     }
-    .window .win-content .right{
+    .window .win-content .right,.details_window .win-content .right{
         width: 100%;
+    }
+    .details_window .win-content .right{
+        align-items: center;
+        gap: 2%;
     }
     .window .win-content .right input{width: 100%;}
     .window .win-content .right div button{border-radius: 10px; width: 100%;}
-    .window .win-content .left{
+    .window .win-content .left,.details_window .win-content .left{
         display: none;
     }
     #notification {
